updates vector files

--- a/ccs/eroei-ccs-workbook.ipynb
+++ b/ccs/eroei-ccs-workbook.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "        Eᵢₙ "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "        E_OM + E_cap + E_f"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "Eᵢₙ = E_cap⋅(L⋅s_OM + 1) + E_f"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "Eₒᵤₜ = L⋅P⋅cf"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "Eₒᵤₜ = Eₑₗ"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "        η   "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
        "      EROEIₜₕ"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
        "                                 EROEIₜₕ⋅η"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
        "            E_cap⋅(f_cap + 1)⋅(L⋅s_OM + 1) + E_f"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
        "                   E_cap⋅(f_cap + 1)⋅(L⋅s_OM + 1) + E_f      "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
        "    E_cap⋅(L⋅s_OM + 1)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +425,7 @@
        "                    R + f_cap + 1         "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
        "                   E_cap⋅(f_cap + 1)⋅(L⋅s_OM + 1) + E_f       "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
        "                   E_cap⋅(f_cap + 1)⋅(L⋅s_OM + 1) + E_f       "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
        "True"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
        "R          1.5745  2.06751  2.91996"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
        "[50, 55, 60, 65, 70, 75, 80, 85, 90, 95, 100]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +772,9 @@
     "axes[0][0].legend(framealpha=0)\n",
     "\n",
     "#plt.suptitle('Normalized Relationship of $EROEI_{el}$ and $R$ to Capacity Factor $CF$ ',fontsize=13,y=1.01)\n",
-    "plt.savefig('plot/figS3.png',dpi=150,bbox_inches = 'tight', pad_inches = 0.1)\n",
+    "plt.savefig('plot/png/figS3.png',dpi=300,bbox_inches = 'tight', pad_inches = 0.1)\n",
+    "plt.savefig('plot/eps/figS3.eps',format='eps',bbox_inches = 'tight', pad_inches = 0.1)\n",
+    "plt.savefig('plot/pdf/figS3.pdf',format='pdf',bbox_inches = 'tight', pad_inches = 0.1)\n",
     "plt.show()"
    ]
   },
@@ -802,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +817,7 @@
        "[1, 0.6610169491525423]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -916,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1073,7 +1075,9 @@
     "axes[0][0].set_xticklabels('')   \n",
     "axes[0][1].set_xticklabels('')  \n",
     "#plt.suptitle(title+'\\nframes represent different capture ratios CR (%)',fontsize=13,y=1.04)\n",
-    "plt.savefig('plot/fig2.png',dpi=150,bbox_inches = 'tight', pad_inches = 0.1)\n",
+    "plt.savefig('plot/png/fig2.png',dpi=300,bbox_inches = 'tight', pad_inches = 0.1)\n",
+    "plt.savefig('plot/eps/fig2.eps',format='eps',bbox_inches = 'tight', pad_inches = 0.1)\n",
+    "plt.savefig('plot/pdf/fig2.pdf',format='pdf',bbox_inches = 'tight', pad_inches = 0.1)\n",
     "plt.show()"
    ]
   },
@@ -1093,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1108,7 +1112,7 @@
        "         ε  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1123,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1138,7 +1142,7 @@
        "       C⋅εₛ + P⋅εₚ"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1153,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1182,7 +1186,7 @@
        "                    i = 1            j = 1                "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1198,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1229,7 +1233,7 @@
        "             i = 1           j = 1                  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1247,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 67,
    "metadata": {
     "scrolled": true
    },
@@ -1280,7 +1284,7 @@
        "             i = 1          j = 1             "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1313,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1342,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1412,9 @@
     "axes[0][0].set_xticklabels('')   \n",
     "axes[0][1].set_xticklabels('')  \n",
     "#plt.suptitle(r'$EROEI_{disp}$ for Scalable Dispatchable Renewables - PV and Wind',fontsize=13,y=0.98)\n",
-    "plt.savefig('plot/fig3.png',dpi=150,bbox_inches = 'tight', pad_inches = 0.1)\n",
+    "plt.savefig('plot/png/fig3.png',dpi=150,bbox_inches = 'tight', pad_inches = 0.1)\n",
+    "plt.savefig('plot/eps/fig3.eps',format='eps',bbox_inches = 'tight', pad_inches = 0.1)\n",
+    "plt.savefig('plot/pdf/fig3.pdf',format='pdf',bbox_inches = 'tight', pad_inches = 0.1)\n",
     "plt.show()"
    ]
   },
@@ -1442,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1451,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1470,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1508,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1589,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1644,7 +1650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1704,7 +1710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1730,7 +1736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1809,7 +1815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2372,7 +2378,7 @@
        "                                     Battery + Curtailment 26                    35.0  "
       ]
      },
-     "execution_count": 90,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2404,7 +2410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2419,7 +2425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2542,7 +2548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2617,7 +2623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2667,7 +2673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -2733,7 +2739,7 @@
     "axes[0][0].legend(loc=(0.03,0.52),framealpha=0,fontsize=11)  \n",
     "        \n",
     "#plt.suptitle('Comparison of adjusted EROEIs for \\nfossil fuels with carbon-capture and storage $EROEI_{CCS}$ and \\ndispatchable renewables with energy storage $EROEI_{disp}$',y=1.03,fontsize=13)\n",
-    "plt.savefig('plot/S4.png',dpi=150,bbox_inches = 'tight', pad_inches = 0.1)\n",
+    "plt.savefig('plot/extra/figS4.png',dpi=150,bbox_inches = 'tight', pad_inches = 0.1)\n",
     "plt.show()"
    ]
   },
@@ -2746,7 +2752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2814,7 +2820,7 @@
     "axes[0][0].legend(loc=(0.03,0.52),framealpha=0,fontsize=11)  \n",
     "        \n",
     "#plt.suptitle('Comparison of adjusted EROEIs for \\nfossil fuels with carbon-capture and storage $EROEI_{CCS}$ and \\ndispatchable renewables with energy storage $EROEI_{disp}$',y=1.03,fontsize=13)\n",
-    "plt.savefig('plot/S5.png',dpi=150,bbox_inches = 'tight', pad_inches = 0.1)\n",
+    "plt.savefig('plot/extra/figS5.png',dpi=150,bbox_inches = 'tight', pad_inches = 0.1)\n",
     "plt.show()"
    ]
   },
@@ -2827,7 +2833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -2887,7 +2893,9 @@
     "axes[0][0].legend(loc=(0.03,0.52),framealpha=0,fontsize=11)       \n",
     "        \n",
     "#plt.suptitle('Comparison of adjusted EROEIs for \\nfossil fuels with carbon-capture and storage $EROEI_{CCS}$ and \\ndispatchable renewables with energy storage $EROEI_{disp}$',y=1.03,fontsize=13)\n",
-    "plt.savefig('plot/fig4.png',dpi=150,bbox_inches = 'tight', pad_inches = 0.1)\n",
+    "plt.savefig('plot/png/fig4.png',dpi=150,bbox_inches = 'tight', pad_inches = 0.1)\n",
+    "plt.savefig('plot/eps/fig4.eps',format='eps',bbox_inches = 'tight', pad_inches = 0.1)\n",
+    "plt.savefig('plot/pdf/fig4.pdf',format='pdf',bbox_inches = 'tight', pad_inches = 0.1)\n",
     "plt.show()"
    ]
   },
@@ -2900,7 +2908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -2960,7 +2968,7 @@
     "axes[0][0].legend(loc=(0.03,0.52),framealpha=0,fontsize=11)       \n",
     "        \n",
     "#plt.suptitle('Comparison of adjusted EROEIs for \\nfossil fuels with carbon-capture and storage $EROEI_{CCS}$ and \\ndispatchable renewables with energy storage $EROEI_{disp}$',y=1.03,fontsize=13)\n",
-    "plt.savefig('plot/fig4_edgeless.png',dpi=150,bbox_inches = 'tight', pad_inches = 0.1)\n",
+    "plt.savefig('plot/extra/fig4_edgeless.png',dpi=150,bbox_inches = 'tight', pad_inches = 0.1)\n",
     "plt.show()"
    ]
   },
@@ -2973,7 +2981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2996,7 +3004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3005,7 +3013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -3053,7 +3061,9 @@
     "ax.set_ylabel('Plant capacity factor')\n",
     "ax.set_xlabel('Percentage of plants (United States)\\n source: US EIA')\n",
     "#ax.set_title('Distribution of annual capacity factors of\\ngas combined-cycle and coal steam plants')\n",
-    "plt.savefig('plot/figS2.png',dpi=150,bbox_inches = 'tight', pad_inches = 0.1)\n",
+    "plt.savefig('plot/png/figS2.png',dpi=150,bbox_inches = 'tight', pad_inches = 0.1)\n",
+    "plt.savefig('plot/eps/figS2.eps',format='eps',bbox_inches = 'tight', pad_inches = 0.1)\n",
+    "plt.savefig('plot/pdf/figS2.pdf',format='pdf',bbox_inches = 'tight', pad_inches = 0.1)\n",
     "plt.show()"
    ]
   },
@@ -3073,6 +3083,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
